[package]
name = "ox"
version = "0.3.0"
edition = "2021"
authors = ["Curlpipe <11898833+curlpipe@users.noreply.github.com>"]
description = "A Rust powered text editor."
homepage = "https://github.com/curlpipe/ox"
repository = "https://github.com/curlpipe/ox"
readme = "README.md"
include = ["src/*.rs", "Cargo.toml"]
categories = ["text-editors"]
keywords = ["text-editor", "editor", "terminal", "tui"]
license = "GPL-2.0"

[profile.release]
lto = true
panic = "abort"
codegen-units = 1

[dependencies]
alinio = "0.2.1"
crossterm = "0.27.0"
jargon-args = "0.2.7"
kaolinite = "0.8.0"
mlua = { version = "0.9.9", features = ["lua54", "vendored"] }
quick-error = "2.0.1"
shellexpand = "3.1.0"
synoptic = "2.0.0"

[package.metadata.rpm]
package = "ox"

[package.metadata.rpm.cargo]
buildflags = ["--release"]

[package.metadata.rpm.targets]
ox = { path = "/usr/bin/ox" }
