[package]
name = "ox"
version = "0.4.0"
edition = "2021"
authors = ["Curlpipe <11898833+curlpipe@users.noreply.github.com>"]
description = "A Rust powered text editor."
homepage = "https://github.com/curlpipe/ox"
repository = "https://github.com/curlpipe/ox"
readme = "README.md"
include = ["src/*.rs", "Cargo.toml", "config/.oxrc"]
categories = ["text-editors"]
keywords = ["text-editor", "editor", "terminal", "tui"]
license = "GPL-2.0"

[package.metadata.generate-rpm]
assets = [
    { source = "target/release/ox", dest = "/usr/bin/ox", mode = "0755" },
    { source = "LICENSE", dest = "/usr/share/doc/ox/LICENSE", doc = true, mode = "0644" },
    { source = "README.md", dest = "/usr/share/doc/ox/README.md", doc = true, mode = "0644" }
]

[profile.release]
lto = true
panic = "abort"
codegen-units = 1

[dependencies]
alinio = "0.2.1"
crossterm = "0.27.0"
jargon-args = "0.2.7"
kaolinite = "0.8.1"
mlua = { version = "0.9.9", features = ["lua54", "vendored"] }
quick-error = "2.0.1"
shellexpand = "3.1.0"
synoptic = "2.0.0"
