[package]
name = "kaolinite"
version = "0.10.0"
authors = ["curlpipe <11898833+curlpipe@users.noreply.github.com>"]
edition = "2021"
license = "MIT"
description = "A crate to assist in the creation of TUI text editors."
repository = "https://github.com/curlpipe/kaolinite"
exclude = ["/demos/7.txt"]
readme = "README.md"
keywords = ["unicode", "text-processing"]
categories = ["text-processing"]

[dependencies]
error_set = "0.7"
regex = "1"
ropey = "1.6.1"
unicode-width = "0.2"

[dev-dependencies]
rand = "0.8.5"
sugars = "3.0.1"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(tarpaulin_include)'] }
